@@ -1,6 +1,7 @@
 1.3 -
  * New Features:
    * mutagen.File: Automatic file type detection.
+   * mutagen.ogg: Generic Ogg stream parsing.
    * mutagen.oggvorbis no longer depends on pyvorbis.
    * ID3: SYLT support. (#672)
 
